fix overlapping text on primary source display on smaller screens
(cherry picked from commit b1136fa51e3afa9f28cc3c8bf84e400677a73ffc)

--- a/css/resource-style.css
+++ b/css/resource-style.css
@@ -79,7 +79,7 @@
 	text-align:right;
 }
 #sngl-resource header.entry-header span.sensitive-resource i { margin-right:10px; }
-.oer-sngl-rsrc-img { width:400px; }
+.oer-sngl-rsrc-img { max-width:400px; width:100%; }
 .oer-featureimg img { width:100%; height:400px; }
 #sngl-resource .tc-field-heading {
 	font-size: 16px;
